# prettyscope-revival

./: .gitignore  CMakeLists.txt  README.md
CODEGUIDE/: AGENTS.md
CODEGUIDE/agents/: ARCHITECT.md  CODEX.md  CONSOLE.md  DIRECTOR.md  TRACER.md  VISION.md  VOID.md
CODEGUIDE/agents/CODEX/memory/: README.md
CODEGUIDE/agents/CONSOLE/: asciiscope-memory.md
CODEGUIDE/agents/CONSOLE/memory/: README.md
CODEGUIDE/agents/DIRECTOR/memory/: README.md
CODEGUIDE/agents/TRACER/memory/: README.md
CODEGUIDE/agents/VISION/: reboot.md
CODEGUIDE/agents/VISION/memory/: README.md  active_threads.md  architecture_invariants.md  business_strategy.md  glossary.md  soundemote_current_state.md
CODEGUIDE/ideas/: soundemote_ideas.md
CODEGUIDE/mission_reports/: 2026-05-25_0856.md  README.md
CODEGUIDE/protocols/: agent_memory.md  coding_style.md  communication_cadence.md  push_policy.md  stamps.md
CODEGUIDE/templates/: completion_report.md  cross_agent_handoff.md  read_only_inspection.md  task.md
docs/: HOST_INTEGRATION.md  PLUGIN_ROADMAP.md  SALVAGE.md  SIDEQUEST_STARTINGPOINT_NOTES.md  VISUAL_STATE.md
examples/: host_bridge_example.cpp
presets/: default.prettyscope.json
src/: main.cpp  prettyscope.hpp
src/app/: preset_store.cpp  preset_store.hpp  standalone_app.cpp  standalone_controls.cpp  standalone_controls.hpp
src/platform/: win32_gl_window.cpp  win32_gl_window.hpp
src/visual/: external_signal_source.cpp  external_signal_source.hpp  scope_engine.cpp  scope_engine.hpp  scope_renderer.cpp  scope_renderer.hpp  signal_buffer.hpp  signal_snapshot.cpp  signal_snapshot.hpp  test_signal.cpp  test_signal.hpp  visual_palettes.cpp  visual_palettes.hpp  visual_parameters.cpp  visual_parameters.hpp  visual_params.hpp
tests/: external_signal_source_tests.cpp  public_header_tests.cpp  scope_engine_tests.cpp  signal_snapshot_tests.cpp  visual_palettes_tests.cpp  visual_parameters_tests.cpp
